kubernetes/platform/keycloak/app/components/httproute/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-http-route
  labels:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
spec:
  parentRefs:
    - name: kube-gateway
  hostnames:
    - sso.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: keycloak-service
          port: 80
